[package]
name = "PowerCrabX"
version = "0.1.0"
edition = "2024"

[dependencies]
bedrockrs = {path = "../bedrock-rs", features = ["full"]}
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
vek = "0.17"
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }
log4rs = "1.3.0"
log = "0.4.27"
once_cell = "1.21.3"
chrono = "0.4"
elliptic-curve = "0.13.8"
sec1 = "0.7.3"
p384 = { version = "0.13", features = ["pkcs8", "ecdh"] }
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }